--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ beautifulsoup4==4.3.2
 blinker==1.3
 docutils==0.12
 feedgenerator==1.7
-Jinja2==2.7.3
-lxml==3.4.4
+Jinja2>=2.10.1
+# lxml==3.4.4
 Markdown==2.6.2
 MarkupSafe==0.23
 pelican==3.5.0
